--- a/SAES_v1/Site.Master
+++ b/SAES_v1/Site.Master
@@ -190,8 +190,8 @@
                         <!-- menu profile quick info -->
                         <div class="profile clearfix">
                             <div class="profile_info" style="margin: auto;">
-                                <span>Bienvenido,John Doe</span>
-                                <span>Perfil:Administrador</span>
+                                <span>Bienvenido,<asp:Label ID="nombre" runat="server" Text=""></asp:Label></span>
+                                <span>Perfil:<asp:Label ID="perfil" runat="server" Text=""></asp:Label></span>
                             </div>
                             <div class="clearfix"></div>
                         </div>
@@ -301,9 +301,8 @@
                             <ul class=" navbar-right">
                                 <span style="font-size: xx-large; padding-left: 200px;">Sistema de Administración Escolar-SAES</span>
                                 <li class="nav-item dropdown open" style="padding-left: 15px; padding-top: 10px;">
-                                    <span style="padding-right: 10px;">John Doe | Administrador </span>
-                                    <a data-toggle="tooltip" data-placement="top" title="Logout" href="login.html">
-                                        <span class="glyphicon glyphicon-off" aria-hidden="true" style="font-size: large;"></span></a>
+                                    <span style="padding-right: 10px;"><asp:Label ID="nombre_1" runat="server" Text=""></asp:Label> | <asp:Label ID="perfil_1" runat="server" Text=""></asp:Label> </span>
+                                    <asp:LinkButton ID="logout_btn" runat="server" OnClick="logout_btn_Click"><span class="glyphicon glyphicon-off" aria-hidden="true" style="font-size: large;"></span></asp:LinkButton>
                                 </li>
                             </ul>
                         </nav>
